--- a/index.html
+++ b/index.html
@@ -8,140 +8,127 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 <style>
-:root {
-    --primary-color:#0056b3;
-    --secondary-color:#004494;
-    --text-color:#333;
-    --light-bg:#f8f9fa;
-    --white:#ffffff;
+:root{
+  --primary:#0056b3;
+  --secondary:#004494;
+  --text:#333;
+  --light:#f8f9fa;
 }
-body {
-    font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;
-    margin:0;
-    color:var(--text-color);
+body{
+  margin:0;
+  font-family:'Segoe UI',Tahoma,Verdana,sans-serif;
+  color:var(--text);
 }
-a { text-decoration:none; color:inherit; }
-h1,h2,h3 { color:#2c3e50; }
+a{text-decoration:none;color:inherit}
+h1,h2,h3{color:#2c3e50}
 
-header {
-    background:#fff;
-    box-shadow:0 2px 10px rgba(0,0,0,.1);
-    position:sticky;
-    top:0;
-    z-index:1000;
+header{
+  background:#fff;
+  box-shadow:0 2px 10px rgba(0,0,0,.1);
+  position:sticky;
+  top:0;
+  z-index:1000;
 }
-.nav-container {
-    max-width:1200px;
-    margin:auto;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    padding:15px 20px;
+.nav-container{
+  max-width:1200px;
+  margin:auto;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:15px 20px;
 }
-.logo {
-    font-size:24px;
-    font-weight:bold;
-    color:var(--primary-color);
-    display:flex;
-    gap:10px;
-    align-items:center;
+.logo{
+  font-size:24px;
+  font-weight:bold;
+  color:var(--primary);
+  display:flex;
+  gap:10px;
 }
-.nav-links {
-    list-style:none;
-    display:flex;
-    gap:30px;
+.nav-links{
+  list-style:none;
+  display:flex;
+  gap:30px;
 }
-.nav-links a:hover { color:var(--primary-color); }
-.cta-button {
-    background:var(--primary-color);
-    color:#fff !important;
-    padding:10px 20px;
-    border-radius:5px;
-    font-weight:bold;
-}
-
-.hero {
-    background:linear-gradient(rgba(0,86,179,.9),rgba(0,68,148,.9)),
-    url('https://source.unsplash.com/random/1920x1080?office') center/cover;
-    color:#fff;
-    text-align:center;
-    padding:100px 20px;
-}
-.hero h1 { font-size:3rem; }
-.hero p { max-width:700px; margin:auto; }
-.hero-btn {
-    background:#fff;
-    color:var(--primary-color);
-    padding:15px 30px;
-    border-radius:30px;
-    display:inline-block;
-    margin-top:20px;
-    font-weight:bold;
+.nav-links a:hover{color:var(--primary)}
+.cta-button{
+  background:var(--primary);
+  color:#fff!important;
+  padding:10px 20px;
+  border-radius:5px;
+  font-weight:bold;
+  border:none;
+  cursor:pointer;
 }
 
-.section-padding { padding:80px 20px; }
-.bg-light { background:var(--light-bg); }
-
-.section-title {
-    text-align:center;
-    margin-bottom:50px;
+.hero{
+  background:linear-gradient(rgba(0,86,179,.9),rgba(0,68,148,.9)),
+  url('https://source.unsplash.com/random/1920x1080?office') center/cover;
+  color:#fff;
+  text-align:center;
+  padding:100px 20px;
+}
+.hero h1{font-size:3rem}
+.hero-btn{
+  background:#fff;
+  color:var(--primary);
+  padding:15px 30px;
+  border-radius:30px;
+  display:inline-block;
+  margin-top:20px;
+  font-weight:bold;
 }
 
-.services-grid {
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
-    gap:30px;
-    max-width:1200px;
-    margin:auto;
+.section{padding:80px 20px}
+.bg-light{background:var(--light)}
+
+.section-title{text-align:center;margin-bottom:50px}
+
+.services-grid{
+  max-width:1200px;
+  margin:auto;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:30px;
 }
-.service-card {
-    background:#fff;
-    padding:30px;
-    border-radius:10px;
-    text-align:center;
-    box-shadow:0 5px 15px rgba(0,0,0,.05);
+.service-card{
+  background:#fff;
+  padding:30px;
+  border-radius:10px;
+  text-align:center;
+  box-shadow:0 5px 15px rgba(0,0,0,.05);
 }
-.service-icon {
-    font-size:40px;
-    color:var(--primary-color);
+.service-icon{font-size:40px;color:var(--primary)}
+
+.form-box{
+  max-width:600px;
+  margin:auto;
+  background:#fff;
+  padding:40px;
+  border-radius:10px;
+  box-shadow:0 5px 20px rgba(0,0,0,.1);
+}
+.form-box input{
+  width:100%;
+  padding:12px;
+  margin-bottom:15px;
 }
 
-.job-form, .subscribe-container {
-    max-width:600px;
-    margin:auto;
-    background:#fff;
-    padding:40px;
-    border-radius:10px;
-    box-shadow:0 5px 20px rgba(0,0,0,.1);
+.contact-container{
+  max-width:1200px;
+  margin:auto;
+  display:flex;
+  flex-wrap:wrap;
+  gap:40px;
 }
-.job-form input, .job-form button,
-.subscribe-container input, .subscribe-container button {
-    width:100%;
-    padding:12px;
-    margin-bottom:15px;
-}
+.contact-info{flex:1}
+.map{flex:1;height:350px}
+iframe{width:100%;height:100%;border:0;border-radius:10px}
 
-.contact-container {
-    display:flex;
-    flex-wrap:wrap;
-    gap:40px;
-    max-width:1200px;
-    margin:auto;
-}
-.contact-info { flex:1; min-width:280px; }
-.map-container { flex:1; min-width:280px; height:350px; }
-.info-item {
-    display:flex;
-    gap:15px;
-    margin-bottom:15px;
-}
-iframe { width:100%; height:100%; border:0; border-radius:10px; }
-
-footer {
-    background:#222;
-    color:#fff;
-    text-align:center;
-    padding:20px;
+footer{
+  background:#222;
+  color:#fff;
+  text-align:center;
+  padding:20px;
 }
 </style>
 </head>
@@ -149,115 +136,112 @@ footer {
 <body>
 
 <header>
-<div class="nav-container">
+  <div class="nav-container">
     <div class="logo"><i class="fas fa-layer-group"></i> Dwise</div>
     <ul class="nav-links">
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#job">Careers</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#job" class="cta-button">Apply Job</a></li>
+      <li><a href="#hero">Home</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#apply">Careers</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#apply" class="cta-button">Apply Job</a></li>
     </ul>
-</div>
+  </div>
 </header>
 
 <section class="hero" id="hero">
-<h1>Smart Solutions for Your Jobs</h1>
-<p>We help you get the right job with professional guidance.</p>
-<a href="#job" class="hero-btn">Apply Now</a>
+  <h1>Smart Solutions for Your Jobs</h1>
+  <p>We help you get the right job with professional guidance.</p>
+  <a href="#apply" class="hero-btn">Apply Now</a>
 </section>
 
-<section class="section-padding bg-light" id="services">
-<div class="section-title"><h2>Our Expertise</h2></div>
-<div class="services-grid">
+<section class="section bg-light" id="services">
+  <div class="section-title"><h2>Our Expertise</h2></div>
+  <div class="services-grid">
     <div class="service-card">
-        <div class="service-icon"><i class="fas fa-laptop-code"></i></div>
-        <h3>Interview Preparation</h3>
+      <div class="service-icon"><i class="fas fa-laptop-code"></i></div>
+      <h3>Interview Preparation</h3>
     </div>
     <div class="service-card">
-        <div class="service-icon"><i class="fas fa-file-contract"></i></div>
-        <h3>Consultancy</h3>
+      <div class="service-icon"><i class="fas fa-file-contract"></i></div>
+      <h3>Consultancy</h3>
     </div>
     <div class="service-card">
-        <div class="service-icon"><i class="fas fa-chart-line"></i></div>
-        <h3>Career Growth</h3>
+      <div class="service-icon"><i class="fas fa-chart-line"></i></div>
+      <h3>Career Growth</h3>
     </div>
-</div>
+  </div>
 </section>
 
-<section class="section-padding" id="job">
-<div class="section-title">
-    <h2>If You Need a Job</h2>
-    <p>Submit your details</p>
-</div>
-<form class="job-form">
-    <input type="text" placeholder="Full Name" required>
-    <input type="email" placeholder="Email Address" required>
-    <input type="tel" placeholder="Mobile Number" required>
-    <input type="file" required>
-    <button class="cta-button">Submit Application</button>
-</form>
+<section class="section" id="apply">
+  <div class="section-title">
+    <h2>Apply for Job</h2>
+    <p>All details will be sent to our email</p>
+  </div>
+
+  <!-- FORM -->
+  <form class="form-box" id="subscribeForm"
+        action="https://formspree.io/f/mkgpdddr"
+        method="POST">
+
+    <input type="hidden" name="_subject" value="New Job Application - Dwise">
+
+    <input type="text" name="full_name" placeholder="Full Name" required>
+    <input type="email" name="email" placeholder="Email Address" required>
+    <input type="tel" name="mobile" placeholder="Mobile Number" required>
+    <input type="text" name="experience" placeholder="Years of Experience" required>
+    <input type="text" name="domain" placeholder="Domain (Java / Testing / HR)" required>
+
+    <!-- Resume note -->
+    <p style="font-size:13px;color:#777">
+      ⚠ Resume upload requires backend (PHP). Free Formspree does not send files.
+    </p>
+
+    <button type="submit" class="cta-button">Submit Application</button>
+  </form>
+
+  <div id="thanksMessage" style="display:none;text-align:center;margin-top:20px;">
+    <h3>Thank you! We received your details.</h3>
+  </div>
+
+  <div id="errorMessage" style="display:none;text-align:center;color:red;margin-top:20px;">
+    <p>Something went wrong. Please try again.</p>
+  </div>
 </section>
 
-<section class="section-padding bg-light">
-<div class="subscribe-container">
-<h2>GET INTO OUR INNER CIRCLE</h2>
-
-<form id="subscribeForm" action="https://formspree.io/f/mkgpdddr" method="POST">
-<input type="hidden" name="_subject" value="New Inner Circle Subscriber - Dwise">
-<input type="email" name="email" placeholder="you@example.com" required>
-    <input type="text" placeholder="Full Name" required>
-    <input type="email" placeholder="Email Address" required>
-    <input type="tel" placeholder="Mobile Number" required>
-    <input type="file" required>
-
-<button type="submit" class="cta-button">Subscribe</button>
-</form>
-
-<div id="thanksMessage" style="display:none;">
-<p>Thank you for subscribing!</p>
-</div>
-<div id="errorMessage" style="display:none;color:red;">
-<p>Something went wrong. Try again.</p>
-</div>
-</div>
-</section>
-
-<section class="section-padding" id="contact">
-<div class="section-title"><h2>Visit Our Office</h2></div>
-<div class="contact-container">
-<div class="contact-info">
-    <div class="info-item"><i class="fas fa-map-marker-alt"></i>
-    Hoodi Village, Mahadeva Pura, Bangalore – 560048</div>
-    <div class="info-item"><i class="fas fa-phone"></i> +91 9705502157</div>
-    <div class="info-item"><i class="fas fa-envelope"></i> support@dewise.com</div>
-</div>
-<div class="map-container">
-<iframe src="https://www.google.com/maps?q=12.9716,77.5946&output=embed"></iframe>
-</div>
-</div>
+<section class="section bg-light" id="contact">
+  <div class="section-title"><h2>Visit Our Office</h2></div>
+  <div class="contact-container">
+    <div class="contact-info">
+      <p><i class="fas fa-map-marker-alt"></i> Hoodi Village, Mahadeva Pura, Bangalore – 560048</p>
+      <p><i class="fas fa-phone"></i> +91 9705502157</p>
+      <p><i class="fas fa-envelope"></i> support@dewise.com</p>
+    </div>
+    <div class="map">
+      <iframe src="https://www.google.com/maps?q=12.9716,77.5946&output=embed"></iframe>
+    </div>
+  </div>
 </section>
 
 <footer>
-<p>&copy; 2025 Dwise. All Rights Reserved.</p>
+  <p>&copy; 2025 Dwise. All Rights Reserved.</p>
 </footer>
 
 <script>
 const form=document.getElementById('subscribeForm');
 form.addEventListener('submit',function(e){
-e.preventDefault();
-fetch(form.action,{
-method:'POST',
-body:new FormData(form),
-headers:{'Accept':'application/json'}
-}).then(r=>{
-if(r.ok){
-form.style.display='none';
-document.getElementById('thanksMessage').style.display='block';
-}else{
-document.getElementById('errorMessage').style.display='block';
-}
-});
+  e.preventDefault();
+  fetch(form.action,{
+    method:'POST',
+    body:new FormData(form),
+    headers:{'Accept':'application/json'}
+  }).then(res=>{
+    if(res.ok){
+      form.style.display='none';
+      document.getElementById('thanksMessage').style.display='block';
+    }else{
+      document.getElementById('errorMessage').style.display='block';
+    }
+  });
 });
 </script>
 
