--- a/index.html
+++ b/index.html
@@ -212,7 +212,21 @@ footer{
   <div class="section-title"><h2>Visit Our Office</h2></div>
   <div class="contact-container">
     <div class="contact-info">
-      <p><i class="fas fa-map-marker-alt"></i> Hoodi Village, Mahadeva Pura, Bangalore – 560048</p>
+      
+  <h3 style="margin-bottom:15px;">Get in Touch</h3>
+
+  <a href="https://wa.me/919346397377?text=Hello%20Dwise%20Team%2C%20I%20am%20looking%20for%20job%20assistance."
+     target="_blank"
+     style="display:inline-flex;align-items:center;gap:10px;
+            background:#25D366;color:#fff;
+            padding:10px 18px;
+            border-radius:30px;
+            font-weight:bold;
+            margin-bottom:20px;">
+    <i class="fab fa-whatsapp" style="font-size:20px;"></i>
+    Chat on WhatsApp
+  </a>
+      <p><i class="fas fa-map-marker-alt"></i> Dwise Consultancy,2nd floor,Tower B,Ardente office,Hoodi Village, Mahadeva Pura, Bangalore – 560048</p>
       <p><i class="fas fa-phone"></i> +91 9705502157</p>
       <p><i class="fas fa-envelope"></i> support@dewise.com</p>
     </div>
@@ -227,20 +241,7 @@ footer{
     </div>
   </div>
 </section>
-  <section id="contact">
-  <h2>Contact Us</h2>
-
-  <form id="enquiryForm">
-    <input type="text" placeholder="Name" required />
-    <input type="email" placeholder="Email" required />
-    <textarea placeholder="Message" required></textarea>
-    <button type="submit">Send Enquiry</button>
-  </form>
-
-  <a class="whatsapp" href="https://wa.me/91XXXXXXXXXX" target="_blank">
-    Chat On WhatsApp
-  </a>
-</section>
+ 
 
 
 <footer>
